--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pinia": "^3.0.3",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
