--- a/src/tasks.json
+++ b/src/tasks.json
@@ -2,24 +2,19 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "npm: dev",
       "type": "npm",
       "script": "dev",
       "isBackground": true,
+      "label": "npm: dev",
       "problemMatcher": {
         "owner": "vite",
-        "pattern": [
-          {
-            "regexp": ".*",
-            "file": 1,
-            "location": 2,
-            "message": 3
-          }
-        ],
+        "pattern": {
+          "regexp": "."
+        },
         "background": {
           "activeOnStart": true,
-          "beginsPattern": ".*Local:.*",
-          "endsPattern": ".*Restarting server.*"
+          "beginsPattern": "Local:",
+          "endsPattern": "Restarting"
         }
       }
     }
