--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "moment": "^2.30.1",
     "pinia": "^3.0.3",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.18",
