--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "pinia": "^3.0.3",
     "tailwindcss": "^3.4.17",
+    "tom-select": "^2.4.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-virtual-scroller": "^2.0.0-beta.8"
